# eos-speedwagon

./: .gitignore  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  eos-speedwagon  eos-speedwagon.in  speedwagon.gresource.xml
data/: com.endlessm.Speedwagon.xml  speedwagon.css
debian/: changelog  control  copyright
src/: config.js.in  eos-speedwagon.c  eos_speedwagon.js
src/js/: main.js
src/lib/: speedwagon-spinner.c  speedwagon-spinner.h
